<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="casual"
            android:text="@string/add_new_user"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameTextFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/name"
            app:hintEnabled="true"
            app:layout_constraintLeft_toRightOf="@id/addImageButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pageTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameTextFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/addImageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/avatar_circle"
            android:clickable="true"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/add_user_image"
            app:layout_constraintBottom_toBottomOf="@id/firstNameTextFieldLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/firstNameTextFieldLayout"
            app:layout_constraintTop_toTopOf="@id/firstNameTextFieldLayout" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/adultToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/parent"
            app:layout_constraintRight_toRightOf="@id/firstNameTextFieldLayout"
            app:layout_constraintTop_toBottomOf="@id/firstNameTextFieldLayout" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/requiresPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/requires_password"
            app:layout_constraintBottom_toBottomOf="@id/adultToggleButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/adultToggleButton" />

        <Button
            android:id="@+id/moneyToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@drawable/button_selector"
            android:text="@string/money"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/requiresPassword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <Button
            android:id="@+id/rewardToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@drawable/button_selector"
            android:text="@string/reward"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/requiresPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/marbleValueLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/marble_value"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/moneyToggleButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/marbleValueEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/valueInfoIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/info_button"
            app:layout_constraintBottom_toBottomOf="@id/marbleValueLayout"
            app:layout_constraintRight_toRightOf="@id/marbleValueLayout"
            app:layout_constraintTop_toTopOf="@id/marbleValueLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rewardNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/goal"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/marbleValueLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rewardNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/marblesRequiredLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/marbles_required"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/rewardNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/marblesRequiredEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/marblesRequiredLayout" />

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>