<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/displayImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageCaptureButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:icon="@drawable/camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="2dp"
        android:visibility="visible"
        android:text="@string/take_a_photo"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageSaveButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toRightOf="@id/vertical_centerline"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="2dp"
        android:text="@string/save_photo"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageCancelButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintRight_toLeftOf="@id/vertical_centerline"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="2dp"
        android:text="@string/clear_photo"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <ImageButton
        android:id="@+id/flipCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/imageCaptureButton"
        app:layout_constraintTop_toTopOf="@id/imageCaptureButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imageCaptureButton"
        android:src="@drawable/flip_camera"
        android:scaleType="centerCrop"
        android:background="@drawable/avatar_circle"
        app:shapeAppearanceOverlay="@style/circular"/>

</androidx.constraintlayout.widget.ConstraintLayout>